crates/kodo_parser/src/snapshots/kodo_parser__tests__snapshot_tests__snapshot_closure_with_params.snap
---
source: crates/kodo_parser/src/tests.rs
expression: module
---
Module {
    id: NodeId(
        1,
    ),
    span: Span {
        start: 0,
        end: 108,
    },
    name: "test",
    imports: [],
    meta: None,
    type_aliases: [],
    type_decls: [],
    enum_decls: [],
    trait_decls: [],
    impl_blocks: [],
    actor_decls: [],
    intent_decls: [],
    invariants: [],
    functions: [
        Function {
            id: NodeId(
                0,
            ),
            span: Span {
                start: 26,
                end: 98,
            },
            name: "main",
            visibility: Private,
            is_async: false,
            generic_params: [],
            annotations: [],
            params: [],
            return_type: Unit,
            requires: [],
            ensures: [],
            body: Block {
                span: Span {
                    start: 36,
                    end: 98,
                },
                stmts: [
                    Let {
                        span: Span {
                            start: 54,
                            end: 84,
                        },
                        mutable: false,
                        name: "f",
                        ty: None,
                        value: Closure {
                            params: [
                                ClosureParam {
                                    name: "x",
                                    ty: Some(
                                        Named(
                                            "Int",
                                        ),
                                    ),
                                    span: Span {
                                        start: 63,
                                        end: 69,
                                    },
                                },
                                ClosureParam {
                                    name: "y",
                                    ty: Some(
                                        Named(
                                            "Int",
                                        ),
                                    ),
                                    span: Span {
                                        start: 71,
                                        end: 77,
                                    },
                                },
                            ],
                            return_type: None,
                            body: BinaryOp {
                                left: Ident(
                                    "x",
                                    Span {
                                        start: 79,
                                        end: 80,
                                    },
                                ),
                                op: Add,
                                right: Ident(
                                    "y",
                                    Span {
                                        start: 83,
                                        end: 84,
                                    },
                                ),
                                span: Span {
                                    start: 79,
                                    end: 84,
                                },
                            },
                            span: Span {
                                start: 62,
                                end: 84,
                            },
                        },
                    },
                ],
            },
        },
    ],
}
