crates/kodo_parser/src/snapshots/kodo_parser__tests__snapshot_tests__snapshot_enum_decl.snap
---
source: crates/kodo_parser/src/tests.rs
expression: module
---
Module {
    id: NodeId(
        1,
    ),
    span: Span {
        start: 0,
        end: 162,
    },
    name: "test",
    imports: [],
    meta: None,
    type_aliases: [],
    type_decls: [],
    enum_decls: [
        EnumDecl {
            id: NodeId(
                0,
            ),
            span: Span {
                start: 26,
                end: 152,
            },
            name: "Shape",
            generic_params: [],
            variants: [
                EnumVariant {
                    name: "Circle",
                    fields: [
                        Named(
                            "Float64",
                        ),
                    ],
                    span: Span {
                        start: 55,
                        end: 70,
                    },
                },
                EnumVariant {
                    name: "Rectangle",
                    fields: [
                        Named(
                            "Float64",
                        ),
                        Named(
                            "Float64",
                        ),
                    ],
                    span: Span {
                        start: 88,
                        end: 115,
                    },
                },
                EnumVariant {
                    name: "Point",
                    fields: [],
                    span: Span {
                        start: 133,
                        end: 138,
                    },
                },
            ],
        },
    ],
    trait_decls: [],
    impl_blocks: [],
    actor_decls: [],
    intent_decls: [],
    invariants: [],
    functions: [],
}
