crates/kodo_parser/src/snapshots/kodo_parser__tests__snapshot_tests__snapshot_error_missing_brace.snap
---
source: crates/kodo_parser/src/lib.rs
expression: err.to_string()
---
expected LBrace, found RBrace at Span { start: 23, end: 24 }
