crates/kodo_parser/src/snapshots/kodo_parser__tests__snapshot_tests__snapshot_error_missing_module_keyword.snap
---
source: crates/kodo_parser/src/lib.rs
expression: err.to_string()
---
expected Module, found Ident("hello") at Span { start: 0, end: 5 }
