crates/kodo_parser/src/snapshots/kodo_parser__tests__snapshot_tests__snapshot_error_unexpected_eof.snap
---
source: crates/kodo_parser/src/tests.rs
expression: err.to_string()
---
unexpected end of input, expected RBrace
