crates/kodo_parser/src/snapshots/kodo_parser__tests__snapshot_tests__snapshot_function_with_params_and_return.snap
---
source: crates/kodo_parser/src/tests.rs
expression: module
---
Module {
    id: NodeId(
        2,
    ),
    span: Span {
        start: 0,
        end: 141,
    },
    name: "m",
    imports: [],
    meta: Some(
        Meta {
            id: NodeId(
                0,
            ),
            span: Span {
                start: 23,
                end: 44,
            },
            entries: [
                MetaEntry {
                    key: "purpose",
                    value: "t",
                    span: Span {
                        start: 23,
                        end: 42,
                    },
                },
            ],
        },
    ),
    type_aliases: [],
    type_decls: [],
    enum_decls: [],
    trait_decls: [],
    impl_blocks: [],
    actor_decls: [],
    intent_decls: [],
    functions: [
        Function {
            id: NodeId(
                1,
            ),
            span: Span {
                start: 57,
                end: 131,
            },
            name: "add",
            is_async: false,
            generic_params: [],
            annotations: [],
            params: [
                Param {
                    name: "a",
                    ty: Named(
                        "Int",
                    ),
                    span: Span {
                        start: 64,
                        end: 70,
                    },
                    ownership: Owned,
                },
                Param {
                    name: "b",
                    ty: Named(
                        "Int",
                    ),
                    span: Span {
                        start: 72,
                        end: 78,
                    },
                    ownership: Owned,
                },
            ],
            return_type: Named(
                "Int",
            ),
            requires: [],
            ensures: [],
            body: Block {
                span: Span {
                    start: 87,
                    end: 131,
                },
                stmts: [
                    Return {
                        span: Span {
                            start: 105,
                            end: 117,
                        },
                        value: Some(
                            BinaryOp {
                                left: Ident(
                                    "a",
                                    Span {
                                        start: 112,
                                        end: 113,
                                    },
                                ),
                                op: Add,
                                right: Ident(
                                    "b",
                                    Span {
                                        start: 116,
                                        end: 117,
                                    },
                                ),
                                span: Span {
                                    start: 112,
                                    end: 117,
                                },
                            },
                        ),
                    },
                ],
            },
        },
    ],
}
