crates/kodo_parser/src/snapshots/kodo_parser__tests__snapshot_tests__snapshot_if_else.snap
---
source: crates/kodo_parser/src/tests.rs
expression: module
---
Module {
    id: NodeId(
        1,
    ),
    span: Span {
        start: 0,
        end: 121,
    },
    name: "test",
    imports: [],
    meta: None,
    type_aliases: [],
    type_decls: [],
    enum_decls: [],
    trait_decls: [],
    impl_blocks: [],
    actor_decls: [],
    intent_decls: [],
    invariants: [],
    functions: [
        Function {
            id: NodeId(
                0,
            ),
            span: Span {
                start: 26,
                end: 111,
            },
            name: "main",
            visibility: Private,
            is_async: false,
            generic_params: [],
            annotations: [],
            params: [],
            return_type: Unit,
            requires: [],
            ensures: [],
            body: Block {
                span: Span {
                    start: 36,
                    end: 111,
                },
                stmts: [
                    Let {
                        span: Span {
                            start: 54,
                            end: 97,
                        },
                        mutable: false,
                        name: "result",
                        ty: Some(
                            Named(
                                "Int",
                            ),
                        ),
                        value: If {
                            condition: BinaryOp {
                                left: Ident(
                                    "x",
                                    Span {
                                        start: 75,
                                        end: 76,
                                    },
                                ),
                                op: Gt,
                                right: IntLit(
                                    0,
                                    Span {
                                        start: 79,
                                        end: 80,
                                    },
                                ),
                                span: Span {
                                    start: 75,
                                    end: 80,
                                },
                            },
                            then_branch: Block {
                                span: Span {
                                    start: 81,
                                    end: 86,
                                },
                                stmts: [
                                    Expr(
                                        IntLit(
                                            1,
                                            Span {
                                                start: 83,
                                                end: 84,
                                            },
                                        ),
                                    ),
                                ],
                            },
                            else_branch: Some(
                                Block {
                                    span: Span {
                                        start: 92,
                                        end: 97,
                                    },
                                    stmts: [
                                        Expr(
                                            IntLit(
                                                0,
                                                Span {
                                                    start: 94,
                                                    end: 95,
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            ),
                            span: Span {
                                start: 72,
                                end: 97,
                            },
                        },
                    },
                ],
            },
        },
    ],
}
