crates/kodo_parser/src/snapshots/kodo_parser__tests__snapshot_tests__snapshot_let_bindings.snap
---
source: crates/kodo_parser/src/tests.rs
expression: module
---
Module {
    id: NodeId(
        1,
    ),
    span: Span {
        start: 0,
        end: 174,
    },
    name: "test",
    imports: [],
    meta: None,
    type_aliases: [],
    type_decls: [],
    enum_decls: [],
    trait_decls: [],
    impl_blocks: [],
    actor_decls: [],
    intent_decls: [],
    invariants: [],
    functions: [
        Function {
            id: NodeId(
                0,
            ),
            span: Span {
                start: 26,
                end: 164,
            },
            name: "main",
            is_async: false,
            generic_params: [],
            annotations: [],
            params: [],
            return_type: Unit,
            requires: [],
            ensures: [],
            body: Block {
                span: Span {
                    start: 36,
                    end: 164,
                },
                stmts: [
                    Let {
                        span: Span {
                            start: 54,
                            end: 69,
                        },
                        mutable: false,
                        name: "x",
                        ty: Some(
                            Named(
                                "Int",
                            ),
                        ),
                        value: IntLit(
                            42,
                            Span {
                                start: 67,
                                end: 69,
                            },
                        ),
                    },
                    Let {
                        span: Span {
                            start: 86,
                            end: 112,
                        },
                        mutable: false,
                        name: "name",
                        ty: Some(
                            Named(
                                "String",
                            ),
                        ),
                        value: StringLit(
                            "hello",
                            Span {
                                start: 105,
                                end: 112,
                            },
                        ),
                    },
                    Let {
                        span: Span {
                            start: 129,
                            end: 150,
                        },
                        mutable: false,
                        name: "flag",
                        ty: Some(
                            Named(
                                "Bool",
                            ),
                        ),
                        value: BoolLit(
                            true,
                            Span {
                                start: 146,
                                end: 150,
                            },
                        ),
                    },
                ],
            },
        },
    ],
}
