crates/kodo_parser/src/snapshots/kodo_parser__tests__snapshot_tests__snapshot_match_expression.snap
---
source: crates/kodo_parser/src/tests.rs
expression: module
---
Module {
    id: NodeId(
        1,
    ),
    span: Span {
        start: 0,
        end: 226,
    },
    name: "test",
    imports: [],
    meta: None,
    type_aliases: [],
    type_decls: [],
    enum_decls: [],
    trait_decls: [],
    impl_blocks: [],
    actor_decls: [],
    intent_decls: [],
    invariants: [],
    functions: [
        Function {
            id: NodeId(
                0,
            ),
            span: Span {
                start: 26,
                end: 216,
            },
            name: "main",
            is_async: false,
            generic_params: [],
            annotations: [],
            params: [],
            return_type: Unit,
            requires: [],
            ensures: [],
            body: Block {
                span: Span {
                    start: 36,
                    end: 216,
                },
                stmts: [
                    Let {
                        span: Span {
                            start: 54,
                            end: 202,
                        },
                        mutable: false,
                        name: "r",
                        ty: Some(
                            Named(
                                "Int",
                            ),
                        ),
                        value: Match {
                            expr: Ident(
                                "x",
                                Span {
                                    start: 73,
                                    end: 74,
                                },
                            ),
                            arms: [
                                MatchArm {
                                    pattern: Variant {
                                        enum_name: Some(
                                            "Option",
                                        ),
                                        variant: "Some",
                                        bindings: [
                                            "v",
                                        ],
                                        span: Span {
                                            start: 97,
                                            end: 112,
                                        },
                                    },
                                    body: Ident(
                                        "v",
                                        Span {
                                            start: 116,
                                            end: 117,
                                        },
                                    ),
                                    span: Span {
                                        start: 97,
                                        end: 117,
                                    },
                                },
                                MatchArm {
                                    pattern: Variant {
                                        enum_name: Some(
                                            "Option",
                                        ),
                                        variant: "None",
                                        bindings: [],
                                        span: Span {
                                            start: 139,
                                            end: 151,
                                        },
                                    },
                                    body: IntLit(
                                        0,
                                        Span {
                                            start: 155,
                                            end: 156,
                                        },
                                    ),
                                    span: Span {
                                        start: 139,
                                        end: 156,
                                    },
                                },
                                MatchArm {
                                    pattern: Wildcard(
                                        Span {
                                            start: 178,
                                            end: 179,
                                        },
                                    ),
                                    body: IntLit(
                                        1,
                                        Span {
                                            start: 183,
                                            end: 184,
                                        },
                                    ),
                                    span: Span {
                                        start: 178,
                                        end: 184,
                                    },
                                },
                            ],
                            span: Span {
                                start: 67,
                                end: 202,
                            },
                        },
                    },
                ],
            },
        },
    ],
}
